--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -406,16 +406,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[['AddPou', 'choose', 'connect', 'assign', 'move', 'assign', 'move', 'assign', 'SaveProject'], ['AddPou', 'choose', 'connect', 'assign', 'move', 'assign', 'move', 'assign', 'SaveProject']], [['AddPou', 'choose', 'connect', 'assign', 'move', 'assign', 'move', 'assign', 'SaveProject'], ['AddPou', 'choose', 'connect', 'assign', 'move', 'assign', 'move', 'assign', 'SaveProject']]]\n",
-      "0.0\n",
-      "0.0\n"
+      "[[0.0, 0.0, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0]]\n"
      ]
     }
    ],
@@ -511,23 +509,37 @@
     "def Dt(data1_seq,t1_seq,data2_seq,t2_seq):\n",
     "    return avg_time_dis(t1_seq,t2_seq)+event_time(data1_seq,data2_seq)\n",
     "\n",
-    "def my_algo(x,y,k):\n",
-    "    x_gram=k_gram(x,k)\n",
-    "    y_gram=k_gram(y,k)\n",
-    "    return Dk(x_gram,y_gram)\n",
+    "def my_algo(user_list,user_time_list,k,alpha,beta):#使用论文的算法计算相似度矩阵\n",
+    "    user_com_seq_list = pre4myalgo(user_list)\n",
+    "    user_com_seq_data=reduce(operator.add, user_com_seq_list)\n",
+    "    user_list_data=reduce(operator.add, user_list)\n",
+    "    user_time_list_data=reduce(operator.add, user_time_list)\n",
+    "    \n",
+    "    n=len(user_com_seq_data)\n",
+    "    simi_matrix=[]\n",
+    "    for i in range(n):\n",
+    "        simi_tmp=[]\n",
+    "        for j in range(n):\n",
+    "            x_gram=k_gram(user_com_seq_data[i],k)\n",
+    "            y_gram=k_gram(user_com_seq_data[j],k)\n",
+    "            Dk_simi = Dk(x_gram,y_gram)\n",
+    "            Dt_simi = Dt(user_list_data[i],user_time_list_data[i],user_list_data[j],user_time_list_data[j])\n",
+    "            simi_tmp.append(alpha*Dk_simi + beta*Dt_simi)\n",
+    "        simi_matrix.append(simi_tmp)\n",
+    "    \n",
+    "    return simi_matrix\n",
     "\n",
     "a=[2,3,4]\n",
     "b=[1,2,3,4]\n",
     "#print(my_algo(a,b,3))\n",
-    "print(pre4myalgo(user_list))\n",
-    "tt=pre4myalgo(user_list)\n",
-    "print(my_algo(tt[0][0],tt[1][0],3))\n",
-    "print(Dt(user_list[0][1],user_time_list[0][1],user_list[0][0],user_time_list[0][0]))"
+    "print(my_algo(user_list,user_time_list,3,0.5,0.5))\n",
+    "#print(my_algo(tt[0][0],tt[1][0],3))\n",
+    "#print(Dt(user_list[0][1],user_time_list[0][1],user_list[0][0],user_time_list[0][0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -602,20 +614,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.0, 0.0, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0]]\n",
+      "[[0.0, 0.0, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0]]\n",
+      "[[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]\n"
+     ]
+    }
+   ],
    "source": [
     "calc_similarity(user_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dope/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:59: ClusterWarning: scipy.cluster: The symmetric non-negative hollow observation matrix looks suspiciously like an uncondensed distance matrix\n"
+     ]
+    }
+   ],
    "source": [
     "test=[[0,1,2,3],\n",
     "      [1,0,4,5],\n",
@@ -627,11 +662,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 clusters\n",
+      "cluster 1 is [0 1]\n",
+      "cluster 2 is [2]\n",
+      "cluster 3 is [3]\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"%d clusters\" % num_clusters)\n",
     "for k, ind in enumerate(indices):\n",
