improve and prove

--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -235,7 +235,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "0.4285714285714286\n",
+      "0.7142857142857143\n",
       "\n"
      ]
     }
@@ -255,34 +255,34 @@
     "\n",
     "\n",
     "def lcs(a,b):\n",
-    "  lena=len(a)\n",
-    "  lenb=len(b)\n",
-    "  c=[[0 for i in range(lenb+1)] for j in range(lena+1)]\n",
-    "  flag=[[0 for i in range(lenb+1)] for j in range(lena+1)]\n",
-    "  for i in range(lena):\n",
-    "    for j in range(lenb):\n",
-    "      if a[i]==b[j]:\n",
-    "        c[i+1][j+1]=c[i][j]+1\n",
-    "        flag[i+1][j+1]='ok'\n",
-    "      elif c[i+1][j]>c[i][j+1]:\n",
-    "        c[i+1][j+1]=c[i+1][j]\n",
-    "        flag[i+1][j+1]='left'\n",
-    "      else:\n",
-    "        c[i+1][j+1]=c[i][j+1]\n",
-    "        flag[i+1][j+1]='up'\n",
-    "  return flag,c\n",
+    "    lena=len(a)\n",
+    "    lenb=len(b)\n",
+    "    c=[[0 for i in range(lenb+1)] for j in range(lena+1)]\n",
+    "    flag=[[0 for i in range(lenb+1)] for j in range(lena+1)]\n",
+    "    for i in range(lena):\n",
+    "        for j in range(lenb):\n",
+    "            if a[i]==b[j]:\n",
+    "                c[i+1][j+1]=c[i][j]+1\n",
+    "                flag[i+1][j+1]='ok'\n",
+    "            elif c[i+1][j]>c[i][j+1]:\n",
+    "                c[i+1][j+1]=c[i+1][j]\n",
+    "                flag[i+1][j+1]='left'\n",
+    "            else:\n",
+    "                c[i+1][j+1]=c[i][j+1]\n",
+    "                flag[i+1][j+1]='up'\n",
+    "    return flag,c\n",
     "\n",
     "def printLcs(flag,a,i,j,result):\n",
-    "  if i==0 or j==0:\n",
-    "    return\n",
-    "  if flag[i][j]=='ok':\n",
-    "    printLcs(flag,a,i-1,j-1,result)\n",
-    "    result.append(a[i-1])\n",
-    "    #print(a[i-1],end='')\n",
-    "  elif flag[i][j]=='left':\n",
-    "    printLcs(flag,a,i,j-1,result)\n",
-    "  else:\n",
-    "    printLcs(flag,a,i-1,j,result)\n",
+    "    if i==0 or j==0:\n",
+    "        return\n",
+    "    if flag[i][j]=='ok':\n",
+    "        printLcs(flag,a,i-1,j-1,result)\n",
+    "        result.append(a[i-1])\n",
+    "        #print(a[i-1],end='')\n",
+    "    elif flag[i][j]=='left':\n",
+    "        printLcs(flag,a,i,j-1,result)\n",
+    "    else:\n",
+    "        printLcs(flag,a,i-1,j,result)\n",
     "    \n",
     "def lcs_dis(a,b):\n",
     "    flag,c = lcs(a,b)\n",
@@ -290,8 +290,8 @@
     "    printLcs(flag,a,len(a),len(b),result)\n",
     "    return 1-len(''.join(result))/max(len(a),len(b))\n",
     "\n",
-    "a='ABCBDAB'\n",
-    "b='BDCABA'\n",
+    "a='abcabc'\n",
+    "b='abcabcabcabcabcabcabc'\n",
     "#for i in c:\n",
     "#  print(i)\n",
     "#print('')\n",
@@ -343,20 +343,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.0\n"
+      "8.0\n"
      ]
     }
    ],
    "source": [
-    "X=[1,2,3,4]\n",
-    "Y=[1,2,3,5]\n",
+    "X=[1,2,3,1,2,3]\n",
+    "Y=[1,2,3,1,2,3,1,2,3,1,2,3,1,2,3,1,2,3]\n",
     "e=dtw(X,Y)\n",
     "print(e)"
    ]
@@ -370,7 +370,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
+      "15\n",
       "[[ 11511.]]\n"
      ]
     }
@@ -400,7 +400,10 @@
     "            matrix[i][j] = min(matrix[i-1][j]+1,matrix[i][j-1]+1,matrix[i-1][j-1]+d)\n",
     "    return matrix[len(str1)][len(str2)]\n",
     "\n",
-    "print(edit_distance('1234','12745'))\n",
+    "\n",
+    "a='abcabc'\n",
+    "b='abcabcabcabcabcabcabc'\n",
+    "print(edit_distance(a,b))\n",
     "print(manhattan_distances('1234','12745'))"
    ]
   },
