generator data source

--- a/Generator.ipynb
+++ b/Generator.ipynb
@@ -102,29 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "IOTest4.txt\n",
-      "IOTest1.txt\n",
-      "IOTest2.txt\n",
-      "IOTest3.txt\n"
-     ]
-    }
-   ],
-   "source": [
-    "for tmp in static_list:\n",
-    "    for file in tmp.keys():\n",
-    "        print(str(file))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -134,8 +112,7 @@
       "16 26 14\n",
       "35 47 39\n",
       "42 54 41\n",
-      "33 48 33\n",
-      "['AddPou  2018/10/03 15:54:03']\n"
+      "33 48 33\n"
      ]
     }
    ],
@@ -149,6 +126,8 @@
     "    for files in static_list:\n",
     "        for name in files.keys():\n",
     "            file_name=path+name\n",
+    "            if os.path.exists(file_name):\n",
+    "                os.remove(file_name)\n",
     "            if not os.path.exists(file_name):\n",
     "                os.system(r\"touch {}\".format(file_name))#调用系统命令行来创建文件\n",
     "            f=open(file_name,'a+')\n",
@@ -170,6 +149,7 @@
     "                f.write('move_start'+date2str(start_time)+'\\n')\n",
     "                f.write('move_end'+date2str(start_time)+'\\n')\n",
     "                f.write('move_end'+date2str(start_time)+'\\n')\n",
+    "                f.write('assign'+date2str(start_time)+'\\n')\n",
     "                assign_count-=1\n",
     "            while connect_count>0:\n",
     "                start_time=generator_time_delta(start_time,8,16)\n",
@@ -180,8 +160,6 @@
     "            start_time=generator_time_delta(start_time,3,6)\n",
     "            f.write('SaveProject'+date2str(start_time)+'\\n')\n",
     "            f.close()\n",
-    "    print(click_seq)\n",
-    "    pass\n",
     "generator_user2(static_list)"
    ]
   },
@@ -197,11 +175,13 @@
     "    path=\"/home/dope/users/user_3/\"\n",
     "    if not os.path.exists(path):\n",
     "        os.makedirs(path)\n",
-    "    start_time=datetime.datetime.strptime(\"2018/10/3 18:54:03\",'%Y/%m/%d %X')\n",
+    "    start_time=datetime.datetime.strptime(\"2018/10/4 13:54:23\",'%Y/%m/%d %X')\n",
     "    click_seq=['AddPou'+date2str(start_time)]\n",
     "    for files in static_list:\n",
     "        for name in files.keys():\n",
     "            file_name=path+name\n",
+    "            if os.path.exists(file_name):\n",
+    "                os.remove(file_name)\n",
     "            if not os.path.exists(file_name):\n",
     "                os.system(r\"touch {}\".format(file_name))#调用系统命令行来创建文件\n",
     "            f=open(file_name,'a+')\n",
@@ -212,30 +192,85 @@
     "            connect_count=dic['connect_count']\n",
     "            assign_count=dic['assign_count']\n",
     "            print(choose_count,connect_count,assign_count)\n",
-    "            while choose_count>0:\n",
-    "                start_time=generator_time_delta(start_time,10,15)\n",
-    "                f.write('choose_start'+date2str(start_time)+'\\n')\n",
-    "                start_time=generator_time_delta(start_time,10,20)\n",
-    "                f.write('choose_end'+date2str(start_time)+'\\n')\n",
-    "                choose_count-=1\n",
-    "            while assign_count>0:\n",
-    "                start_time=generator_time_delta(start_time,16,28)\n",
-    "                f.write('move_start'+date2str(start_time)+'\\n')\n",
-    "                f.write('move_end'+date2str(start_time)+'\\n')\n",
-    "                f.write('move_end'+date2str(start_time)+'\\n')\n",
-    "                assign_count-=1\n",
-    "            while connect_count>0:\n",
-    "                start_time=generator_time_delta(start_time,8,16)\n",
-    "                f.write('move_start'+date2str(start_time)+'\\n')\n",
-    "                f.write('connect'+date2str(start_time)+'\\n')\n",
-    "                f.write('move_end'+date2str(start_time)+'\\n')\n",
-    "                connect_count-=1\n",
+    "            while choose_count + assign_count + connect_count > 0:\n",
+    "                if choose_count > 0 :\n",
+    "                    start_time=generator_time_delta(start_time,5,15)\n",
+    "                    f.write('choose_start'+date2str(start_time)+'\\n')\n",
+    "                    start_time=generator_time_delta(start_time,8,20)\n",
+    "                    f.write('choose_end'+date2str(start_time)+'\\n')\n",
+    "                    choose_count-=1\n",
+    "                if connect_count>0:\n",
+    "                    start_time=generator_time_delta(start_time,8,10)\n",
+    "                    f.write('move_start'+date2str(start_time)+'\\n')\n",
+    "                    f.write('connect'+date2str(start_time)+'\\n')\n",
+    "                    f.write('move_end'+date2str(start_time)+'\\n')\n",
+    "                    connect_count-=1\n",
+    "                if assign_count>0:\n",
+    "                    start_time=generator_time_delta(start_time,10,20)\n",
+    "                    f.write('move_start'+date2str(start_time)+'\\n')\n",
+    "                    f.write('move_end'+date2str(start_time)+'\\n')\n",
+    "                    f.write('move_end'+date2str(start_time)+'\\n')\n",
+    "                    f.write('assign'+date2str(start_time)+'\\n')\n",
+    "                    assign_count-=1\n",
     "            start_time=generator_time_delta(start_time,3,6)\n",
     "            f.write('SaveProject'+date2str(start_time)+'\\n')\n",
-    "            f.close()\n",
-    "    print(click_seq)\n",
-    "    pass\n",
+    "            f.close()    \n",
     "generator_user3(static_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def generator_user4(static_list):\n",
+    "    path=\"/home/dope/users/user_4/\"\n",
+    "    if not os.path.exists(path):\n",
+    "        os.makedirs(path)\n",
+    "    start_time=datetime.datetime.strptime(\"2018/10/4 13:54:23\",'%Y/%m/%d %X')\n",
+    "    click_seq=['AddPou'+date2str(start_time)]\n",
+    "    for files in static_list:\n",
+    "        for name in files.keys():\n",
+    "            file_name=path+name\n",
+    "            if os.path.exists(file_name):\n",
+    "                os.remove(file_name)\n",
+    "            if not os.path.exists(file_name):\n",
+    "                os.system(r\"touch {}\".format(file_name))#调用系统命令行来创建文件\n",
+    "            f=open(file_name,'a+')\n",
+    "            f.write('AddPou'+date2str(start_time)+'\\n')\n",
+    "            dic=files[name]\n",
+    "            #print(dic)\n",
+    "            choose_count=dic['choose_count']\n",
+    "            connect_count=dic['connect_count']\n",
+    "            assign_count=dic['assign_count']\n",
+    "            print(choose_count,connect_count,assign_count)\n",
+    "            while choose_count + assign_count + connect_count > 0:\n",
+    "                if choose_count > 0 :\n",
+    "                    start_time=generator_time_delta(start_time,12,19)\n",
+    "                    f.write('choose_start'+date2str(start_time)+'\\n')\n",
+    "                    start_time=generator_time_delta(start_time,10,20)\n",
+    "                    f.write('choose_end'+date2str(start_time)+'\\n')\n",
+    "                    choose_count-=1\n",
+    "                if assign_count>0:\n",
+    "                    start_time=generator_time_delta(start_time,10,28)\n",
+    "                    f.write('move_start'+date2str(start_time)+'\\n')\n",
+    "                    f.write('move_end'+date2str(start_time)+'\\n')\n",
+    "                    f.write('move_end'+date2str(start_time)+'\\n')\n",
+    "                    f.write('assign'+date2str(start_time)+'\\n')\n",
+    "                    assign_count-=1\n",
+    "                if connect_count>0:\n",
+    "                    start_time=generator_time_delta(start_time,5,16)\n",
+    "                    f.write('move_start'+date2str(start_time)+'\\n')\n",
+    "                    f.write('connect'+date2str(start_time)+'\\n')\n",
+    "                    f.write('move_end'+date2str(start_time)+'\\n')\n",
+    "                    connect_count-=1\n",
+    "            start_time=generator_time_delta(start_time,7,17)\n",
+    "            f.write('SaveProject'+date2str(start_time)+'\\n')\n",
+    "            f.close()    \n",
+    "generator_user4(static_list)"
    ]
   }
  ],
