--- a/Generator.ipynb
+++ b/Generator.ipynb
@@ -96,13 +96,13 @@
     "        user_list.append(user_tmp)\n",
     "        #user_time_list.append(user_time_tmp)\n",
     "    return user_list#,user_time_list\n",
-    "user_list=read_all_seq('/home/dope/users/')#user_list就是所有用户所有工程的点击序列，time就是所有用户所有工程的时间序列\n",
+    "user_list=read_all_seq('/home/dope/user/')#user_list就是所有用户所有工程的点击序列，time就是所有用户所有工程的时间序列\n",
     "#print(user_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -165,11 +165,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16 26 14\n",
+      "35 47 39\n",
+      "42 54 41\n",
+      "33 48 33\n"
+     ]
+    }
+   ],
    "source": [
     "def generator_user3(static_list):\n",
     "    path=\"/home/dope/users/user_3/\"\n",
@@ -192,13 +201,13 @@
     "            connect_count=dic['connect_count']\n",
     "            assign_count=dic['assign_count']\n",
     "            print(choose_count,connect_count,assign_count)\n",
-    "            while choose_count + assign_count + connect_count > 0:\n",
-    "                if choose_count > 0 :\n",
+    "            while choose_count > 0 :\n",
     "                    start_time=generator_time_delta(start_time,5,15)\n",
     "                    f.write('choose_start'+date2str(start_time)+'\\n')\n",
     "                    start_time=generator_time_delta(start_time,8,20)\n",
     "                    f.write('choose_end'+date2str(start_time)+'\\n')\n",
     "                    choose_count-=1\n",
+    "            while choose_count + assign_count + connect_count > 0:\n",
     "                if connect_count>0:\n",
     "                    start_time=generator_time_delta(start_time,8,10)\n",
     "                    f.write('move_start'+date2str(start_time)+'\\n')\n",
@@ -220,11 +229,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16 26 14\n",
+      "35 47 39\n",
+      "42 54 41\n",
+      "33 48 33\n"
+     ]
+    }
+   ],
    "source": [
     "def generator_user4(static_list):\n",
     "    path=\"/home/dope/users/user_4/\"\n",
@@ -247,13 +265,13 @@
     "            connect_count=dic['connect_count']\n",
     "            assign_count=dic['assign_count']\n",
     "            print(choose_count,connect_count,assign_count)\n",
-    "            while choose_count + assign_count + connect_count > 0:\n",
-    "                if choose_count > 0 :\n",
+    "            while choose_count > 0 :\n",
     "                    start_time=generator_time_delta(start_time,12,19)\n",
     "                    f.write('choose_start'+date2str(start_time)+'\\n')\n",
     "                    start_time=generator_time_delta(start_time,10,20)\n",
     "                    f.write('choose_end'+date2str(start_time)+'\\n')\n",
     "                    choose_count-=1\n",
+    "            while choose_count + assign_count + connect_count > 0:\n",
     "                if assign_count>0:\n",
     "                    start_time=generator_time_delta(start_time,10,28)\n",
     "                    f.write('move_start'+date2str(start_time)+'\\n')\n",
